--- a/package.json
+++ b/package.json
@@ -4,7 +4,197 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "node tools/nodeVersionCheck.js",
+    "start-message": "babel-node tools/startMessage.js",
+    "prestart": "npm-run-all --parallel start-message preprocess-db",
+    "preprocess-db": "node tools/addIdforMarker.js",
+    "start": "npm-run-all --parallel test:watch open:src lint:watch start-server start-json-server",
+    "start-server": "babel-node server.js -- --watch",
+    "start-json-server": "json-server --watch db.json --port 3004",
+    "start-servers": "npm-run-all --parallel open:dist start-server start-json-server",
+    "start-local-servers": "npm-run-all --parallel open:local-dist start-server start-json-server",
+    "open:src": "babel-node tools/srcServer.js",
+    "open:local-dist": "babel-node tools/localDistServer.js",
+    "open:dist": "babel-node tools/distServer.js",
+    "lint": "esw webpack.config.* src tools --color",
+    "lint:watch": "npm run lint -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "rimraf ./dist",
+    "prebuild": "npm run clean-dist && npm run lint && npm run test && npm run preprocess-db",
+    "local-build": "babel-node tools/build.js && npm run start-local-servers",
+    "build": "babel-node tools/build.js && npm run start-servers",
+    "test": "jest",
+    "test:CI": "babel-node tools/testCi.js",
+    "test:cover": "npm run test -- --coverage ",
+    "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test:watch": "npm run test -- --watch",
+    "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
+    "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
+  },
+  "dependencies": {
+    "axios": "0.17.1",
+    "bootstrap-sass": "3.3.7",
+    "dateformat": "3.0.2",
+    "express": "4.15.4",
+    "file-saver": "1.3.3",
+    "http-proxy-middleware": "0.17.4",
+    "isomorphic-fetch": "2.2.1",
+    "jsdifflib": "1.1.0",
+    "json-server": "0.12.0",
+    "lodash": "4.17.4",
+    "normalizr": "3.2.3",
+    "object-assign": "4.1.0",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-redux": "5.0.5",
+    "react-router": "3.0.5",
+    "react-router-redux": "4.0.8",
+    "redux": "3.6.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.1.0",
+    "url-search-params": "0.10.0",
+    "uuid": "3.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "7.1.2",
+    "axios-mock-adapter": "1.10.0",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-react-constant-elements": "6.23.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.6",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-1": "6.24.1",
+    "browser-sync": "2.18.12",
+    "chalk": "2.0.1",
+    "connect-history-api-fallback": "1.3.0",
+    "coveralls": "2.13.1",
+    "css-loader": "0.28.4",
+    "enzyme": "2.9.1",
+    "eslint": "4.2.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-react": "7.1.0",
+    "eslint-watch": "3.1.2",
+    "extract-text-webpack-plugin": "3.0.0-rc.2",
+    "file-loader": "0.11.2",
+    "html-webpack-plugin": "2.29.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "20.0.4",
+    "jest-cli": "20.0.4",
+    "json-loader": "0.5.4",
+    "mockdate": "2.0.1",
+    "node-sass": "4.5.3",
+    "npm-run-all": "4.0.2",
+    "opn-cli": "3.1.0",
+    "postcss-loader": "1.2.1",
+    "prompt": "1.0.0",
+    "prop-types": "15.5.10",
+    "react-hot-loader": "3.0.0-beta.6",
+    "react-test-renderer": "15.5.4",
+    "redux-immutable-state-invariant": "2.0.0",
+    "redux-mock-store": "1.3.0",
+    "replace": "0.3.0",
+    "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "url-loader": "0.5.9",
+    "webpack": "3.1.0",
+    "webpack-bundle-analyzer": "2.8.2",
+    "webpack-dev-middleware": "1.11.0",
+    "webpack-hot-middleware": "2.18.2",
+    "webpack-md5-hash": "0.0.5"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings"
+    ],
+    "plugins": [
+      "react"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true,
+        "experimentalObjectRestSpread": true
+      }
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true,
+      "jquery": true,
+      "jest": true
+    },
+    "rules": {
+      "quotes": 0,
+      "no-console": 1,
+      "no-debugger": 1,
+      "no-var": 1,
+      "semi": [
+        1,
+        "always"
+      ],
+      "no-trailing-spaces": 0,
+      "eol-last": 0,
+      "no-underscore-dangle": 0,
+      "no-alert": 0,
+      "no-lone-blocks": 0,
+      "jsx-quotes": 1,
+      "react/display-name": [
+        1,
+        {
+          "ignoreTranspilerName": false
+        }
+      ],
+      "react/forbid-prop-types": [
+        1,
+        {
+          "forbid": [
+            "any"
+          ]
+        }
+      ],
+      "react/jsx-boolean-value": 0,
+      "react/jsx-closing-bracket-location": 0,
+      "react/jsx-curly-spacing": 1,
+      "react/jsx-indent-props": 0,
+      "react/jsx-key": 1,
+      "react/jsx-max-props-per-line": 0,
+      "react/jsx-no-bind": 0,
+      "react/jsx-no-duplicate-props": 1,
+      "react/jsx-no-literals": 0,
+      "react/jsx-no-undef": 1,
+      "react/jsx-pascal-case": 1,
+      "react/jsx-sort-prop-types": 0,
+      "react/jsx-sort-props": 0,
+      "react/jsx-uses-react": 1,
+      "react/jsx-uses-vars": 1,
+      "react/jsx-wrap-multilines": 1,
+      "react/no-danger": 1,
+      "react/no-did-mount-set-state": 1,
+      "react/no-did-update-set-state": 1,
+      "react/no-direct-mutation-state": 1,
+      "react/no-multi-comp": 1,
+      "react/no-set-state": 0,
+      "react/no-unknown-property": 1,
+      "react/prefer-es6-class": 1,
+      "react/prop-types": 1,
+      "react/react-in-jsx-scope": 1,
+      "import/extensions": 1,
+      "react/self-closing-comp": 1,
+      "react/sort-comp": 1
+    },
+    "globals": {}
   },
   "repository": {
     "type": "git",
